# lib/api-spec/openapi.yaml
@@ -3489,6 +3489,8 @@ components:
           enum: [text, number]
         sortOrder:
           type: integer
+        sortable:
+          type: boolean
         createdAt:
           type: string
           format: date-time
@@ -3500,6 +3502,7 @@ components:
         - name
         - type
         - sortOrder
+        - sortable
         - createdAt
         - updatedAt
 
@@ -3511,6 +3514,8 @@ components:
         type:
           type: string
           enum: [text, number]
+        sortable:
+          type: boolean
       required:
         - name
 
@@ -3522,6 +3527,8 @@ components:
         type:
           type: string
           enum: [text, number]
+        sortable:
+          type: boolean
         sortOrder:
           type: integer
 
